namespace-guardrails/backend-to-mysql.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql-allow-backend-exporter
  namespace: blog-prod
spec:
  podSelector:
    matchLabels:
      app: mysql
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: app-green
        - podSelector:
            matchLabels:
              app: mysqld-exporter
      ports:
        - protocol: TCP
          port: 3306
